--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -3,7 +3,7 @@
 @import "partials/transitions";
 @import "partials/util";
 // Import Bulma and Buefy styles
-@import "~bulma";
-@import "~buefy/src/scss/buefy";
+// @import "~bulma";
+// @import "~buefy/src/scss/buefy";
 
 @import "general/layout";
